syntax = "proto3";

package go.micro.srv.subscribe;

service Subscribe {
	rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}
	rpc ListSubscriptions(ListSubscriptionsRequest) returns (ListSubscriptionsResponse) {}
}

message SubscribeRequest {
	// namespaces are owned by the account that first creates a subscription in them
	string namespace = 1;
	string email = 2;
}

message SubscribeResponse {
}


message ListSubscriptionsRequest {
	string namespace = 1;
}

message ListSubscriptionsResponse {
	repeated Subscription subscriptions = 1;
}

message Subscription {
	string email = 1;
}